week1 starting layouts

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 330 Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    Hello
+
+    <h1>WDD 330 Portfolio - Roberto Villanueva Moreno</h1>
+    <h2>Block 1</h2>
+    <ol id="main-ordered-list"></ol>
+
 </body>
+
+<script src="js/main.js"></script>
 
 </html>
