--- a/week5/index.html
+++ b/week5/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 4 Notes</title>
+    <title>Week 5 Notes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Week 4 - Notes</h1>
+    <h1>Week 5 - Notes</h1>
     <h2>Objects, the Document Object Modell and Events</h2>
     <p>The only thing I have to show is the dojo application.</p>
 
-    <p>Click <a href="dojo.html">here</a> to see the dojo app by the end of Chapter 12!</p>
+    <p>Click <a href="dojo.html">here</a> to see the dojo app. Open the console to see the debug class on functions!</p>
 
 </body>
 <script src="scripts.js"></script>
