--- a/todo/index.html
+++ b/todo/index.html
@@ -7,45 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fontawesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <!-- Bootswatch Darkly Theme -->
+    <!-- Bootswatch Theme -->
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css" rel="stylesheet" />
     <title>JS Todo List</title>
 </head>
 
 <body>
-    <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">JS Todo List</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">
-            Home <span class="sr-only">(current)</span>
-          </a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0" id="filters">
-                <label class="font-weight-bold text-info mr-3">Filters</label>
-                <input type="radio" name="type" value="all" class="mx-1">
-                <label for="male" class="mb-0">All</label>
-                <input type="radio" name="type" value="completed" class="mx-1">
-                <label for="female" class="mb-0">Completed</label>
-                <input type="radio" name="type" value="uncompleted" class="mx-1">
-                <label for="other" class="mr-2 mb-0">Uncompleted</label>
-
-                <input class="form-control mr-sm-2" type="search" name="words" placeholder="Words" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit" id="search">
-          Search
-        </button>
-            </form>
-        </div>
-    </nav>
-
+    <h1 style="text-align: center; margin: 50px;">Todos</h1>
     <!-- Modal -->
 
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -107,11 +76,11 @@
                     <div class="row">
                         <div class="col-sm-3 d-sm-flex align-items-center">
                             <label class="m-sm-0">Title</label>
-                            <input type="text" id="title" class="form-control ml-sm-2" placeholder="Learn JS">
+                            <input type="text" id="title" class="form-control ml-sm-2">
                         </div>
                         <div class="px-sm-2 col-sm-7 d-sm-flex align-items-center mt-2 mt-sm-0">
                             <label class="m-sm-0">Description</label>
-                            <input type="text" id="description" class="form-control ml-sm-2" placeholder="Watch JS Tutorials">
+                            <input type="text" id="description" class="form-control ml-sm-2">
                         </div>
                         <div class="col-sm-2 d-sm-flex justify-content-end mt-4 mt-sm-0">
                             <button type="button" class="btn btn-info btn-block" id="add">
@@ -143,8 +112,27 @@
                     </tbody>
                 </table>
             </div>
+            <div id="navbarSupportedContent">
+                <form class="form-inline my-2 my-lg-0" id="filters">
+                    <label class="font-weight-bold text-info mr-3">Filters</label>
+                    <input type="radio" name="type" value="all" class="mx-1">
+                    <label for="male" class="mb-0">All</label>
+                    <input type="radio" name="type" value="completed" class="mx-1">
+                    <label for="female" class="mb-0">Completed</label>
+                    <input type="radio" name="type" value="uncompleted" class="mx-1">
+                    <label for="other" class="mr-2 mb-0">Uncompleted</label>
+
+                    <input class="form-control mr-sm-2" type="search" name="words" aria-label="Search">
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit" id="search">
+              Search
+            </button>
+                </form>
+            </div>
         </div>
+
     </main>
+
+
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
