--- a/todoV1/index.html
+++ b/todoV1/index.html
@@ -6,22 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todos - Roberto Villanueva</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <div id="container">
-        <h1>Todos</h1>
-        <table id="todo_table">
+    <div class="container mb-3 mt-3">
+        <h1 class="text-center">Todos</h1>
+        <table id="todo_table" class="table table-striped table-bordered mydatatable" style="width: 100%;">
             <tbody>
             </tbody>
         </table>
         <div>
-            <p></p><samp id="tasks_left"></samp> task(s) left</p><button id="all">All</button><button id="active">Active</button><button id="completed">Completed</button>
+            <p></p><samp id="tasks_left"></samp> task(s) left</p>
+            <label>Filters:<button id="all" class="btn btn-primary m-2">All</button>
+                <button id="active" class="btn btn-secondary m-2">Active</button>
+                <button class="btn btn-success m-2" id="completed">Completed</button></label>
         </div>
         <br>
-        <div>
-            <input id="todo_input" type="text"><button id="todo_btn">+</button>
+        <div class="input-group-text">
+            <button id="todo_btn" class="btn btn-primary m-2">+</button><input id="todo_input" type="text" class="form-control">
         </div>
     </div>
 
