--- a/todoV1/index.html
+++ b/todoV1/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container mb-3 mt-3">
-        <h1 class="text-center">Todos</h1>
+        <h1 style="text-align: center; margin: 50px;">Todos</h1>
         <table id="todo_table" class="table table-striped table-bordered mydatatable" style="width: 100%;">
             <tbody>
             </tbody>
