--- a/week7/index.html
+++ b/week7/index.html
@@ -15,7 +15,7 @@
     <p>The only thing I have to show is the dojo application.</p>
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app</p>
-    <p>This app fetches informations from 'https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/questions.json' to create the quiz.</p>
+    <p>This app fetches informations from <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/questions.json">'https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/questions.json'</a> to create the quiz.</p>
 
 </body>
 <script src="scripts.js"></script>
