--- a/week8/index.html
+++ b/week8/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 8</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -39,10 +39,10 @@
         <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum sunt soluta tenetur laboriosam molestias, eaque non, modi quidem fugit alias dicta ex saepe repudiandae eveniet inventore accusantium voluptatibus odit facilis adipisci nisi reiciendis
             minima omnis porro voluptate. Deleniti doloremque, nesciunt error accusantium enim dolorem perspiciatis sapiente, distinctio facere libero alias.</p>
         <br>
-
+        <a href="teamActivity.html">Team Activity</a>
     </div>
     <br>
-    <script src="script.js"></script>
+
 </body>
 
 </html>
