week5 teamActivity with no streach challenges yet

--- a/week5/index.html
+++ b/week5/index.html
@@ -15,6 +15,7 @@
     <p>The only thing I have to show is the dojo application.</p>
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app. Open the console to see the debug class on functions!</p>
+    <p>Click <a href="teamActivity/index.html">here</a> to see the Team Activity.</p>
 
 </body>
 <script src="scripts.js"></script>
