week5 teamA version1.0

--- a/week4/index.html
+++ b/week4/index.html
@@ -15,6 +15,7 @@
     <p>The only thing I have to show is the dojo application.</p>
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app by the end of Chapter 12!</p>
+    <p>Click <a href="teamActivity/">here</a> to see the Team Activity</p>
 
 </body>
 <script src="scripts.js"></script>
