note about heroku

--- a/week10/index.html
+++ b/week10/index.html
@@ -18,6 +18,7 @@
         <p> As you can see, I allowed the application to do 'POST' requests. However, if I try to submit a new name to append it to the list, I get a Cors problem. You can see that error in the browser's window.</p>
         <p class="mb-5">Do you know what might be the issue with my applications? Is this a server or client-side problem? Is there something you recommend me read? Thank you in advance :D</p>
         <h2 class="mb-5 text-3xl font-bold">Names:</h2>
+        <p class="mb-5">(It might take a bit for the names to load because I am using Heroku for the backend, and for some reason it takes time to load when you just open a Heroku app for the first time)</p>
         <ul class="mb-5" id="nameList"></ul>
         New Name: <input type="text" id="newName" class="border rounded p-1">
         <button id="submitName" class="border rounded p-1 bg-gray-100">Submit</button>
