--- a/week7/index.html
+++ b/week7/index.html
@@ -16,6 +16,7 @@
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app</p>
     <p>This app fetches informations from <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/questions.json">'https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/questions.json'</a> to create the quiz.</p>
+    <p>Click <a href="teamActivity/">here</a> to see the Team Activity.</p>
 
 </body>
 <script src="scripts.js"></script>
