added more fx, minor css changes

--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -11,13 +11,15 @@
 
 <body>
     <div>
-        <h1>Asteroids</h1>
+        <h1>****** Welcome to Asteroids ******</h1>
         <canvas id="gameCanvas" width="700" height="500"></canvas>
+        <p id="red">You are the ship's pilot. Save your crew from the asteroids!</p>
         <ul>
-            <li>Up Key: Trust</li>
-            <li>Left Key: Rotate left</li>
-            <li>Righ Key: Rotate right</li>
-            <li>Space: Shoot!</li>
+            <li>INPUT</li>
+            <li>UpKey: Trust</li>
+            <li>LeftKey: Rotate left</li>
+            <li>RighKey: Rotate right</li>
+            <li>SpaceBar: Shoot!</li>
         </ul>
         <p>Note: The Best Score will be saved in local storage</p>
     </div>
