working on portfolio submission

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 330 Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container mx-auto mb-20 bg-gray-900 text-white font-semibold">
 
-    <h1>WDD 330 Portfolio - Roberto Villanueva Moreno</h1>
-    <h2>Block 1</h2>
-    <ol id="main-ordered-list"></ol>
+    <h1 class="text-5xl mt-5">WDD 330 Portfolio</h1>
+    <h1 class="text-2xl mb-5">Roberto Villanueva Moreno</h1>
+    <h2 class="text-3xl mt-5">Challenges</h2>
+    <ul class="ml-5" id="challenges"></ul>
+    <h2 class="text-3xl mt-5">Notes and Exercises</h2>
+    <ul class="ml-5" id="notesAndExercises"></ul>
+    <h2 class="text-3xl mt-5">Team Activities</h2>
+    <ul class="ml-5" id="teamActivities"></ul>
 
 </body>
 
