--- a/week10/index.html
+++ b/week10/index.html
@@ -13,8 +13,7 @@
     <div class="container mx-auto">
         <h1 class="text-center m-5 text-4xl font-bold">Week 10: Notes and Exercises</h1>
         <p class="mb-5">For my backend class this week (CSE 341), I have been working on an application that retrieves the Avengers' names from a JSON file. For this class, I wanted to use the fetch method to retrieve the same names and display them on the screen. That
-            part is working just fine because I changed the Cors setting on the server like this:</p>
-        <img class="mb-5" src="Capture.JPG" alt="screenshot">
+            part is working just fine because I changed the Cors setting on the serve:</p>
         <p> As you can see, I allowed the application to do 'POST' requests. However, if I try to submit a new name to append it to the list, I get a Cors problem. You can see that error in the browser's window.</p>
         <p class="mb-5">Do you know what might be the issue with my applications? Is this a server or client-side problem? Is there something you recommend me read? Thank you in advance :D</p>
         <h2 class="mb-5 text-3xl font-bold">Names:</h2>
