--- a/week4/teamActivity/index.html
+++ b/week4/teamActivity/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="h-screen flex flex-col justify-center w-96 m-auto">
+    <h1 class="font-bold text-3xl text-center">Tic-Tac-Toe</h1>
     <div id="board" class="container m-auto bg-gray-200 grid grid-cols-3">
         <div class="flex items-center justify-center h-32 border-2 border-white" id="1"></div>
         <div class="flex items-center justify-center h-32 border-2 border-white" id="2"></div>
