--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -12,6 +12,7 @@
 <body>
     <div>
         <h1>****** Welcome to Asteroids ******</h1>
+        <p>I decided to implement the game Asteroids because I built this game for another class and I wanted to play the same game in the browser.</p>
         <canvas id="gameCanvas" width="700" height="500"></canvas>
         <p id="red">You are the ship's pilot. Save your crew from the asteroids!</p>
         <ul>
