--- a/week4/index.html
+++ b/week4/index.html
@@ -11,11 +11,10 @@
 
 <body>
     <h1>Week 4 - Notes</h1>
-    <h2>Objects, the Document Object Modell and Events</h2>
+    <h2>Forms, Object Oriented Programming, and Modern JavaScript</h2>
     <p>The only thing I have to show is the dojo application.</p>
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app by the end of Chapter 12!</p>
-    <p>Click <a href="teamActivity/">here</a> to see the Team Activity</p>
 
 </body>
 <script src="scripts.js"></script>
