--- a/week5/index.html
+++ b/week5/index.html
@@ -11,11 +11,10 @@
 
 <body>
     <h1>Week 5 - Notes</h1>
-    <h2>Objects, the Document Object Modell and Events</h2>
+    <h2>Testing and Debugging</h2>
     <p>The only thing I have to show is the dojo application.</p>
 
     <p>Click <a href="dojo.html">here</a> to see the dojo app. Open the console to see the debug class on functions!</p>
-    <p>Click <a href="teamActivity/index.html">here</a> to see the Team Activity.</p>
 
 </body>
 <script src="scripts.js"></script>
