--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <div>
-        <h1>****** Welcome to Asteroids ******</h1>
-        <p>I decided to implement the game Asteroids because I built this game for another class and I wanted to play the same game in the browser.</p>
+        <h1>🚀 Welcome to Asteroids 🚀</h1>
         <canvas id="gameCanvas" width="700" height="500"></canvas>
         <p id="red">You are the ship's pilot. Save your crew from the asteroids!</p>
         <ul>
@@ -22,7 +21,9 @@
             <li>RighKey: Rotate right</li>
             <li>SpaceBar: Shoot!</li>
         </ul>
-        <p>Note: The Best Score will be saved in local storage</p>
+        <p>Note1: The Best Score will be saved in local storage</p>
+
+        <p>Note2: I decided to implement the game Asteroids because I built this game for another class and I wanted to play the same game in the browser.</p>
     </div>
     <script src="asteroids.js">
     </script>
