minor asteroid changes

--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -13,16 +13,13 @@
     <div>
         <h1>🚀 --- Welcome to Asteroids --- 🚀</h1>
         <canvas id="gameCanvas" width="700" height="500"></canvas>
-        <p id="red">- You are the ship's pilot. Save your crew from the asteroids! -</p>
+        <p id="red">You are the ship's pilot. Save your crew from the asteroids!</p>
         <ul>
-            <li>---INPUT---</li>
-            <li>Up Key: Thrust</li>
-            <li>Left Key: Rotate left</li>
-            <li>Righ Key: Rotate right</li>
-            <li>Space Bar: Shoot!</li>
+            <li>⬆️=Thrust</li>
+            <li>⬅️=Rotate-left</li>
+            <li>➡️=Rotate-right</li>
+            <li>SpaceBar=Shoot!</li>
         </ul>
-        <p>Note1: The Best Score will be saved in local storage.</p>
-        <p>Note2: I decided to implement the game Asteroids because I built this game for another class and I wanted to play the same game in the browser.</p>
     </div>
     <script src="asteroids.js">
     </script>
