more little changes

--- a/week10/teamActivity/index.html
+++ b/week10/teamActivity/index.html
@@ -12,10 +12,11 @@
 
     <main id="content">
         <h1 class="text-5xl mt-5 mb-3">Quake List from Your Location</h1>
-        <label class="ml-5">Enter a radius: <input class="border text-gray-900" id="radiusInput" type="number"> kms. </label>
+        <label class="ml-5">Enter a radius: <input class="border text-gray-900 rounded bg-blue-200" id="radiusInput" type="number"> kms. </label>
         <button class="px-8 py-1 bg-gray-600 rounded" id="radiusBtn">Get List</button>
         <p class="ml-5">(Default radius is 500km)</p>
         <ul id="quakeList" class="ml-5"></ul>
+        <p class="ml-5">***It would be nice to implement the Input Dates fileds***</p>
     </main>
 
     <script src="index.js" type="module"></script>
