--- a/week8/teamActivity.html
+++ b/week8/teamActivity.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-blue-100 text-gray-800">
+<body class="bg-gray-900 text-gray-100">
     <div class="container mx-auto">
         <h1 class="text-center m-5 text-4xl font-bold">Pokemon API</h1>
     </div>
