--- a/week7/teamActivity/index.html
+++ b/week7/teamActivity/index.html
@@ -12,6 +12,7 @@
     <main class="container mx-auto mb-20 font-semibold">
         <h1 class="text-6xl text-center py-7 bg-blue-200 my-5">Great Hikes</h1>
         <ul id="hikeList"></ul>
+        <section id="comments"></section>
     </main>
     <script src="index.js" type="module"></script>
 </body>
